# TalkToMyCV

./: .dockerignore  Dockerfile  README.md  pyproject.toml  readme.md
app/: main.py
app/api/: resume.py  routes.py
app/services/: query_engine.py  search.py  vectorize.py
app/utils/: limiter.py  pdf_parser.py  pdf_reader.py
tmp/vector_store/41b88c12-ee29-49cc-95cd-c6a7938167fa/: index.faiss  index.pkl
tmp/vector_store/a6ca3676-fe2e-4241-afc7-01f1f527f9be/: index.faiss  index.pkl
tmp/vector_store/ed6cdaf3-2452-409c-b01d-571e5283450f/: index.faiss  index.pkl
vector_store/684519ab-fd49-4fa6-a26a-304505023f8a/: index.faiss  index.pkl
vector_store/default/: index.faiss  index.pkl
vector_store/e0e519d9-5716-4f68-9e00-0754428d8b27/: index.faiss  index.pkl
vector_store/faiss_index/: index.pkl
